# audio-cleaner

./: .gitignore  CLAUDE.md  README.md  clean.py  pyproject.toml  requirements-gpu.txt  requirements.txt
cleaner/: __init__.py  align.py  assemble.py  audio.py  cli.py  report.py  text.py  transcribe.py  util.py
data/script/: Annexation of Crimea.txt
